--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,7 +1,9 @@
 table.table-laporan.dataTable th {
 	vertical-align: middle !important;
 }
-
+.dataTables_filter {
+	display: none;
+	}
 .footer-filter {
 	vertical-align: bottom !important;
 	display: flex;
